k8s: module 2: Simplify package structure. Introduce additional properties for DB configuration.

--- a/resources-service/src/main/resources/application.properties
+++ b/resources-service/src/main/resources/application.properties
@@ -20,13 +20,13 @@ eureka.client.serviceUrl.registerWithEureka=${ENABLE_EUREKA_CLIENT:false}
 
 # Details for our datasource
 spring.datasource.url = jdbc:postgresql://${RESOURCES_DB_URL:127.0.0.0}:${RESOURCES_DB_PORT:5433}/postgres
-spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.username = ${RESOURCES_DB_USER:postgres}
+spring.datasource.password = ${RESOURCES_DB_PASSWORD:postgres}
 
 
 # Hibernate properties
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
