--- a/songs-service/src/main/resources/application.properties
+++ b/songs-service/src/main/resources/application.properties
@@ -11,13 +11,13 @@ eureka.client.serviceUrl.registerWithEureka=${ENABLE_EUREKA_CLIENT:false}
 
 # Details for our datasource
 spring.datasource.url = jdbc:postgresql://${SONGS_DB_URL:127.0.0.0}:${SONGS_DB_PORT:5432}/postgres
-spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.username = ${SONGS_DB_USER:postgres}
+spring.datasource.password = ${SONGS_DB_PASSWORD:postgres}
 
 
 # Hibernate properties
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
