Songs/Resources: Introduce Health checks for microservices and server.servlet.contextPath

--- a/resources-service/src/main/resources/application.properties
+++ b/resources-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=${RESOURCES_MS_NAME:resources-ms}
 
 server.port = ${RESOURCES_MS_PORT:8080}
+server.servlet.contextPath = /resources-ms
 
 #spring.multipart.max-file-size=20MB
 #spring.multipart.max-request-size=20MB
