--- a/songs-service/src/main/resources/application.properties
+++ b/songs-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=${SONGS_MS_NAME:songs-ms}
 
 server.port = ${SONGS_MS_PORT:8081}
+server.servlet.contextPath = /songs-ms
 
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_URI:localhost}:8761/eureka
 eureka.instance.prefer-ip-address=true
@@ -10,7 +11,7 @@ eureka.client.enabled=${ENABLE_EUREKA_CLIENT:false}
 eureka.client.serviceUrl.registerWithEureka=${ENABLE_EUREKA_CLIENT:false}
 
 # Details for our datasource
-spring.datasource.url = jdbc:postgresql://${SONGS_DB_URL:127.0.0.0}:${SONGS_DB_PORT:5432}/postgres
+spring.datasource.url = jdbc:postgresql://${SONGS_DB_URL:127.0.0.1}:${SONGS_DB_PORT:5432}/postgres
 spring.datasource.username = ${SONGS_DB_USER:postgres}
 spring.datasource.password = ${SONGS_DB_PASSWORD:postgres}
 
